<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_thread"
        android:icon="@drawable/ic_nav_thread"
        android:title="@string/nav_thread" />

    <item
        android:id="@+id/nav_knot"
        android:icon="@drawable/ic_nav_knot"
        android:title="@string/nav_knot" />

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_nav_home"
        android:title="@string/nav_home" />

    <item
        android:id="@+id/nav_analysis"
        android:icon="@drawable/ic_nav_analysis"
        android:title="@string/nav_analysis" />

    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_nav_settings"
        android:title="@string/nav_settings" />

</menu>
